# Endure

./: Makefile  Notes.txt  README.md  main.cpp
games/Endure/: .clang-format  CMakeLists.txt  Makefile  main.cpp  save0.json  save1.json
games/Endure/include/: Sprite.h  declarations.h  function_definitions.h  pathfinders.h  raylib.h  resources.h  rlgl.h  save_system.h  structs.h
games/Endure/resources/maps/: level0.json  level1.json
games/Endure/resources/shaders/: blur.fs
include/: resources.h
resources/maps/: level1.json
